Online Registration form

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <hr>
 <form>
 <fieldset class="contact-info">
-<div class="leftmar">
+
     <legend>Contact Information</legend>
     
     <div class="info">  
@@ -113,13 +113,13 @@
 <label for="zip">Zip Code</label>
    <input class="input1" type="text" id="zip">
 </div>
-</div>
+
 </fieldset>
  
 
    
-   <fieldset>
- <div class="news-1">
+   <fieldset class="news-1">
+ 
 
    <legend>Newsletter</legend>
 
@@ -150,7 +150,7 @@
 
   <p class="foot"><em>© Copyright The Code Review</em></p>
 </div>
-</div>
+
    </fieldset>
   </form>
 </body>
