--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
     
 <div class="info">
 <label for="phone">Phone Number:</label>
-  <input class="input1" type="tel" id="phone" name="phone">
+  <input class="input1" type="tel" id="phone" name="phone"  placeholder="(123) 456-7890">
 </div>
 
 <div class="info"> 
 <label for="street">Street Address:</label>
-  <input class="input1" type="text" id="street" name="street">
+  <input class="input1" type="text" id="street" name="street" placeholder="1234 Type Street Name">
 </div>
 
 <div class="info">
     <label for="city">City:</label>
-  <input class="input1" type="text" id="city" name="city">
+  <input class="input1" type="text" id="city" name="city" placeholder="City Name">
 </div>
 
 <div class="info">
@@ -111,7 +111,7 @@
    
 <div class="info">
 <label for="zip">Zip Code</label>
-   <input class="input1" type="text" id="zip">
+   <input class="input1" type="text" id="zip"  placeholder="12345">
 </div>
 
 </fieldset>
